--- a/src/kanban/kanban.css
+++ b/src/kanban/kanban.css
@@ -1,3 +1,9 @@
+@import url('header.css');
+@import url('main.css');
+@import url('footer.css');
+@import url('menu.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
 	margin: 0px;
 	padding: 0px;
@@ -11,96 +17,8 @@ body {
 	justify-content: space-between;
 }
 
-.header {
-	height: 55px;
-	background-color: #0067A3;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.main {
-	width: calc(100vh-110px);
-}
 
 
-.app-logo {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-end;
-}
 
-.app-logo__title {
-	font-family: Roboto;
-	font-size: 32px;
-	color: #fff;
-	padding-bottom: 2px;
-}
 
-.create-new-list {
-	position: absolute;
-	right: 113px;
-	background-color: #fff;
-	height: 33px;
-	width: 181px;
-	border-radius: 5px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-around;
-}
 
-.create-new-list__text {
-	font-family: Roboto;
-	font-size: 20px;
-	color: #000;
-	padding-right: 5px;
-}
-
-.create-new-list__icon {
-	padding-left: 5px;
-}
-
-.user-menu {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-}
-
-.user-menu__avatar {
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background-color: #fff;
-}
-
-.footer {
-	height: 55px;
-	background-color: #0067A3;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.tasks-info, .user-info {
-	font-family: Roboto;
-	font-size: 16px;
-	color: #fff;
-}
-
-.tasks-info {
-	display: flex;
-	flex-direction: row;
-	padding-left: 67px;
-}
-
-.tasks__amount {
-	padding-right: 36px;
-}
-
-.user-info {
-	padding-right: 24px;
-}
