--- a/src/ex9_html-css-fundamentals-part1/task-03.css
+++ b/src/ex9_html-css-fundamentals-part1/task-03.css
@@ -1,4 +1,4 @@
-#innerDiv {
+#buttonLabel {
 	background: linear-gradient(to bottom, rgba(220,220,220, 1) 35%, rgba(184,184,184, 1) 65%);
 	box-shadow: 0 1px 4px rgba(0,0,0,0.8);
 	border-radius: 8px;
@@ -9,21 +9,21 @@
 	height: 44px;
 	text-align: center;
 }
-#innerDiv::before, #innerDiv::after {
+#buttonLabel::before, #buttonLabel::after {
 	content: "★";
    	color: rgb(120,120,120);
    	text-shadow: 1px 1px 1px rgba(255,255,255, 0.5);
    	font-size: 30px;
    	padding: 2px;
 }
-#mediumDiv {
+#buttonInnerBorder {
 	width: 210px;
 	height: 56px;
 	background: rgba(210,210,210, 1);
 	border-radius: 15px;
 	border: 1px solid white;
 }
-#externalDiv {
+#button {
 	border-radius: 15px;
 	border: 2px solid rgb(120,120,120);
 	width: 212px;
