--- a/src/ex9_html-css-fundamentals-part1/task.css
+++ b/src/ex9_html-css-fundamentals-part1/task.css
@@ -3,55 +3,45 @@ div.inform  {
 	height: 500px;
 	background-color: white;
 }
-input {
-	border-radius: 5px;
-	border: 1px solid black;
-	width: 300px;
-	height: 20px;
-	display: grid;
-	max-width: 300px;
-	max-height: 40px;
-	padding: 10px;
-}
+
 textarea {
 	resize: none;
-	width: 90%;
-	height: 150%;
+	position: relative;
+	width: 300px;
+	height: 200px;
 	border-radius: 5px;
-  	border: 1px solid black;
-  	display: grid;
+	border: 1px solid black;
+	left: 110px;
+	bottom: 20px;
 }
 h3 {
 	margin-top: -20px;
 	margin-left: 10px;
 	color: rgb(212,82,82);
-
 }
+
 hr {
 	color: black;
 	margin-top: -5px;
 	background-color: black; 
     height: 1.5px; 
 }
+
 label {
-    padding: 10px;
-    display: grid;
-    margin-left: 10px;
 	font: bold 18px Arial; 
-	width: 70%;
+	width: 100px;
 }
-label, input {
-	 grid-template-columns: 20% 50% 15% 5%;
-}
+
 .arrow-left {
 	width: 0; 
 	height: 0; 
 	border-top: 10px solid transparent;
 	border-bottom: 10px solid transparent; 
 	border-right:10px solid rgb(212,82,82); 
-	margin-top: 9px;
+	margin-top: 40px;
 	margin-right: 40px;
 }
+
 .arrow-left::after {
 	content: "Form field hint";
 	height: 25px;
@@ -65,22 +55,41 @@ label, input {
 	color: white;
 	font: bold 16px Arial;
 }
-::placeholder {
+
+input::placeholder {
 	color: gray;
 	font-size: 1.4em;
 }
+
 button {
 	border-radius: 9px;
 	height: 40px;
 	width: 130px;
 	border: 1px solid gray;
 	font: bold 14px Arial;
-	margin-top: 30px;
-	margin-left: 70px;
+	position: relative;
+	bottom: -160px;
+	left: 100px;
 }
+
 .arrow-left {
-	padding-left: 500px;
+	padding-left: 400px;
 	position: relative;
 	top: -50px;
 } 
-	
+
+.inputItem {
+	margin:20px;
+	padding:0px;
+	height: 50px;
+}
+
+input {
+	border-radius: 5px;
+	border: 1px solid black;
+	width: 200px;
+	height: 20px;
+	padding: 10px;
+	position: absolute;
+	left: 140px;
+}
