--- a/src/ex11_html-css-advanced/task-01.css
+++ b/src/ex11_html-css-advanced/task-01.css
@@ -11,11 +11,10 @@
 	to { transform: rotate(360deg); }
 }
 
-
 @keyframes circle {
 
 	to {transform: translateY(400px); }
-	}		 
+}		 
 
 .loader {
 	animation: rotate 1s infinite linear;
@@ -31,7 +30,7 @@
 	background-color: lightgray;
 }
 
-.spaceforcircle {
+.spaceForCircle {
 	height: 500px;
 	width: 100px;
 	background-color: lightblue;
@@ -50,37 +49,13 @@
 	z-index: 1;
 }
 
-@keyframes thirdanim {
-	0% 	{ border-radius: 40%;}
-	5% 	{ border-radius: 30%;}
-	10% { border-radius: 20%;}
-	15% { border-radius: 10%;}
-	19% { border-radius: 0;}
-	20% { background: linear-gradient(to top left, white, blue, red);}
-	40% {transform: scale(1); transform: skewX(45deg); transform: rotate(90deg); }
-	60% {transform: rotate(360deg); }
-	80% {background: linear-gradient(to top left, powderblue, pink); }
-	100% {border-radius: 50%}
-}
-
-
-@keyframes tosquare {
+@keyframes toSquare {
 	10% { border-radius: 50%; transform: scale(1);  background: linear-gradient(to top left, #737AAF, pink); }
 	20% { border-radius: 40%; transform: scale(0.8); background: linear-gradient(to top left, #5D66AF, pink); }
 	40% { border-radius: 30%; transform: scale(1);  background: linear-gradient(to top left, #232A5F, pink); transform: rotate(30deg); }
 	60% { border-radius: 20%; transform: scale(0.8); background: linear-gradient(to top left, #262A47, pink); transform: skew(-10deg);}
 	80% { border-radius: 10%; transform: scale(1); background: linear-gradient(to top left, #0B113E, pink); transform: skew(-20deg);}
 	100% { border-radius: 0; transform: scale(0.8); background: linear-gradient(to top left, #0B190E, pink);}
-}
-
-@keyframes changegradient {
-
-	10% { background: linear-gradient(to top left, #737AAF, pink); transition: 3s;}
-	20% { background: linear-gradient(to top left, #5D66AF, pink);transition: 3s;}
-	40% { background: linear-gradient(to top left, #232A5F, pink); transition: 3s;}
-	60% { background: linear-gradient(to top left, #262A47, pink); transition: 3s;}
-	80% { background: linear-gradient(to top left, #0B113E, pink); transition: 3s;}
-	100% { background: linear-gradient(to top left, #0B190E, pink); transition: 3s;}
 }
 
 .animation {
@@ -90,6 +65,6 @@
 	height: 400px;
 	width: 400px;
 	border-radius: 50%;
-	animation: tosquare 4s infinite linear, tosquare 4s infinite linear reverse;
+	animation: toSquare 4s infinite linear, toSquare 4s infinite linear reverse;
 }
 
