Moved tasks to folders, fixed labels and svgs

--- a/src/ex10_html-css-fundamentals-part2/task-02/task-02.css
+++ b/src/ex10_html-css-fundamentals-part2/task-02/task-02.css
@@ -1,14 +1,14 @@
 .fieldsetdiv {
-	
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
+
 form {
 	width: 50%;
 }
 
-#personal1_post, #personal1_get {
+#personalPartOnePOST, #personalPartOneGET {
 	height: 300px;
 	padding-top: 10px;
 }
@@ -18,19 +18,20 @@ textarea {
 	height: 100px;
 }
 
-#personal2_post, #personal2_get {
+#personalPartTwoPOST, #personalPartTwoGET {
 	height: 300px;
 }
+
 hr {
 	margin: 20px 0px 20px 0px;
 }
 
-#contact_post, #contact_get {
+#contactPOST, #contactGET {
 	height: 100px;
 	padding: 10px 0px 10px 0px;
 }
 
-#formend_post, #formend_get {
+#formEndPOST, #formEndGET {
 	height: 50px;
 	padding: 10px 0px 10px 0px;
 }
