--- a/src/ex10_html-css-fundamentals-part2/task-04/tablet.css
+++ b/src/ex10_html-css-fundamentals-part2/task-04/tablet.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 1204px) {
-	.burgericon {
+	.menu_tablet {
 		display: none;
 	}
 
@@ -11,7 +11,6 @@
     	display: none;
     }
 }
-
 
 @media only screen and (max-width: 1203px) {
 	.about {
@@ -36,7 +35,7 @@
     }
 
     .maininfo {
-    	background-image: url(tabletbg.png);
+    	background-image: url(images/tabletbg.png);
     	height: 736px;
     }
 
@@ -47,7 +46,8 @@
 
     .title__heading {
     	top: -10px;
-    }
+	}
+	
     .underheading__and, .underheading {
     	bottom: 110px;
     }
@@ -65,10 +65,7 @@
 		z-index: 2;
 		transition: 0.5s;
 		visibility: hidden;
-
 	}
-
-
 
 	.navigation {
 		display: flex;
@@ -76,22 +73,21 @@
 		justify-content: space-between;
 	}
 
-.logo__text {
-	color: #4b81a8;
-	font-size: 26px;
-	font-family: 'Open Sans', sans-serif;
-}
+	.logo__text {
+		color: #4b81a8;
+		font-size: 26px;
+		font-family: 'Open Sans', sans-serif;
+	}
 
 }
 
-.burgericon {
+.menu_tablet {
 	display: flex;
 	flex-direction: column;
 	position: relative;
 	height: 60px;
 	padding-left: 15px;
 }
-
 
 .burger {
 	height: 10px;
@@ -100,12 +96,11 @@
 	margin-top: 10px;
 }
 
-.burgericon:hover {
+.menu_tablet:hover {
 	cursor: pointer;
 }
 
-
-.burgericon:hover ~ ul {
+.menu_tablet:hover ~ .menu {
 	cursor: pointer;
 	visibility: visible;
 	transition: 0.1s;
@@ -115,9 +110,8 @@
 	visibility: visible;
 }
 
-
 .tabletlogo {
-	background-image: url(tabletlogo.png);
+	background-image: url(images/tabletlogo.png);
 	height: 64px;
 	width: 157px;
 	display: flex;
@@ -128,7 +122,6 @@
 	font-size: 16px;
 	font-family: 'Open Sans', sans-serif;
 	position: absolute;
-	left: 40%;
-	
+	left: 40%;	
 }
 
