Add ex13 + fixes

--- a/src/kanban/kanban.css
+++ b/src/kanban/kanban.css
@@ -1,12 +1,13 @@
-@import url('header.css');
-@import url('main.css');
-@import url('footer.css');
-@import url('menu.css');
+@import url('styles/header.css');
+@import url('styles/main.css');
+@import url('styles/footer.css');
+@import url('styles/menu.css');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
 	margin: 0px;
 	padding: 0px;
+	font-family: Roboto, sans-serif;
 }
 
 body {
