--- a/src/kanban/styles/header.css
+++ b/src/kanban/styles/header.css
@@ -12,17 +12,17 @@
 	display: flex;
 	flex-direction: row;
 	align-items: flex-end;
+	padding-left: 15px;
 }
 
 .app-logo__title {
-	font-family: Roboto, sans-serif;
+	padding-left: 5px;
 	font-size: 32px;
 	color: #fff;
 	padding-bottom: 2px;
 }
 
 .create-new-list {
-	position: absolute;
 	right: 113px;
 	background-color: #fff;
 	height: 33px;
@@ -58,9 +58,17 @@
 	height: 40px;
 	border-radius: 50%;
     background-color: #fff;
-    z-index: 2;
+	z-index: 2;
 }
 
 .user-menu__panel:hover {
     cursor: pointer;
+}
+
+.userpanel {
+	display: flex;
+	flex-direction: row;
+	width: 300px;
+	justify-content: space-around;
+	align-items: center;
 }
