--- a/src/kanban/styles/menu.css
+++ b/src/kanban/styles/menu.css
@@ -9,6 +9,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     padding: 5px;
+    box-shadow: 0 0 5px rgb(104, 104, 104);
 }
 
 .menu__item {
@@ -17,7 +18,6 @@
     width: 200px;
     border-radius: 10px;
     border: 5px solid #EBECF0;
-    font-family: Roboto;
 	font-size: 16px;
     color: #000;
 }
