Added animation instead of svg style, made button and menu header

--- a/src/kanban/styles/header.css
+++ b/src/kanban/styles/header.css
@@ -32,6 +32,12 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-around;
+	border: none;
+}
+
+.create-new-list:hover .create-new-list__text, .create-new-list:hover {
+	cursor: pointer;
+	color: #0067A3;
 }
 
 .create-new-list__text {
@@ -71,4 +77,16 @@
 	width: 300px;
 	justify-content: space-around;
 	align-items: center;
+}
+
+@keyframes rotateArrowOpen {
+	to {
+		transform: rotate(180deg);
+	}
+}
+
+@keyframes rotateArrowClose {
+	to {
+		transform: rotate(-180deg);
+	}
 }
