--- a/src/kanban/styles/menu.css
+++ b/src/kanban/styles/menu.css
@@ -1,35 +1,40 @@
-.menu {
-    position: absolute;
-    list-style: none;
-    background-color: #EBECF0;
-    right: 0px;
+.menu__list {
+	list-style: none;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 5px;
-    box-shadow: 0 0 5px rgb(104, 104, 104);
+	padding: 5px;
+	overflow:auto;
 }
 
 .menu__item {
-    background-color: white;
+	background-color: white;
+	opacity: 20%;
     padding: 10px;
-    width: 200px;
     border-radius: 10px;
     border: 5px solid #EBECF0;
+    font-family: Roboto;
 	font-size: 16px;
-    color: #000;
+	color: #000;
+	animation: 0.2s append linear forwards;
 }
 
-.menu__item:first-child {
-    background-color: #EBECF0; 
-    font-size: 20px;
+.menu__header {
+    font-family: Roboto;
+	font-size: 20px;
     padding: 0px;
-    padding-left: 5px;
+	padding-left: 15px;
+	padding-top: 5px;
 }
 
-
+.menu__block {
+    position: absolute;
+    width: 200px;
+	background-color: #EBECF0;
+	border-radius: 10px;
+	display: flex;
+    flex-direction: column;
+    right: 0px;
+    box-shadow: 0 0 5px gray;
+}
 @keyframes showmenu {
     0% {
         top: 55px;
@@ -53,6 +58,7 @@
 .menu__item-link {
     text-decoration: none;
     color: #000;
+    display: block;
 }
 
 .menu__item-link:hover {
@@ -61,8 +67,3 @@
     cursor: pointer;
 }
 
-#menuTitle {
-    text-decoration: none;
-    color: #000;
-    cursor: unset;
-}
