Added ex17 homework: reorganized files, added readme

--- a/src/kanban/src/style.css
+++ b/src/kanban/src/style.css
@@ -2,6 +2,10 @@
 @import url('styles/main.css');
 @import url('styles/footer.css');
 @import url('styles/menu.css');
+@import url('styles/block.css');
+@import url('styles/input.css');
+@import url('styles/addbutton.css');
+@import url('styles/dropdown.css');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
